# libGodot

./: README.md  SConstruct  build.sh
drivers/gl_context/: SCsub
libTest/android/: settings.gradle
libTest/android/app/: build.gradle
libTest/android/app/src/main/: AndroidManifest.xml
libTest/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libTest/android/app/src/main/res/layout/: activity_main.xml
libTest/android/gradle/: libs.versions.toml
libTest/android/gradle/wrapper/: gradle-wrapper.properties
libTest/linux/: CMakeLists.txt  main.cpp
libTest/testProj/: check_button.gd  check_button.gd.uid  icon.svg.import  node_2d.tscn  project.godot
libTest/testProj/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache10  filesystem_update4  node_2d.tscn-editstate-362256a061aa8890e9a1e558b11e5ec3.cfg  project_metadata.cfg  script_editor_cache.cfg
main/: main.cpp
platform/android/: SCsub  java_godot_io_wrapper.h  java_godot_wrapper.h  os_android.cpp
platform/android/hook/: displayserver_embedded.cpp  displayserver_embedded.h  embedded_export.cpp  embedded_export.h  embedded_os.cpp  godot_android_hook.cpp  godot_android_hook.h  godot_hook.cpp  godot_io_hook.cpp  reamde.md
platform/embedded/: SCsub  detect.py  displayserver_embedded.cpp  displayserver_embedded.h  embedded_export.cpp  embedded_export.h  embedded_main.cpp  embedded_os.cpp  embedded_os.h  platform_config.h  platform_gl.h
platform/linuxbsd/: SCsub  detect.py  godot_linuxbsd.cpp
platform/linuxbsd/hook/: godot_linux_hook.cpp  godot_linux_hook.h
(+6 files in other folders)
